src/objects/TriggerHandler__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAfter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAfter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBefore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBefore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpdate</label>
        <type>Checkbox</type>
    </fields>
    <label>TriggerHandler</label>
</CustomObject>